<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewDetailsTitle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:textSize="28sp"
                android:textColor="@color/orange_700"
                android:text="@string/costume_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageDetailsCostume"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDetailsTitle"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20Percent"
                app:srcCompat="@drawable/gallery" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewItemsHeading"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="12dp"
                android:textSize="18sp"
                android:textColor="@color/orange_700"
                android:text="@string/items"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageDetailsCostume"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewItems"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="12dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:text="@string/items"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewItemsHeading"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewStepsHeading"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="12dp"
                android:textSize="18sp"
                android:textColor="@color/orange_700"
                android:text="@string/steps_upper"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewItems"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewSteps"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_centerVertical="true"
                android:layout_margin="12dp"
                android:textSize="14sp"
                android:text="@string/steps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewStepsHeading"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>